--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>ligretto-frontend</title>
+    <script src="https://kit.fontawesome.com/c1a13c5013.js" crossorigin="anonymous"></script>
+    <title>Ligretto!</title>
   </head>
   <body>
     <noscript>
